--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,34 +1,55 @@
-.myButton{
-    min-width: 150px;
-    height: 40px;
-    border: none;
-    color: rgb(88, 0, 0);
-    border-radius: 8px;
+.myButton {
+  min-width: 150px;
+  height: 40px;
+  border: none;
+  color: rgb(88, 0, 0);
+  border-radius: 8px;
 
-    font-size: 18px;
-    transition: background-color 0.5s ease-in-out;
+  font-size: 18px;
+  transition: all 0.5s ease-in-out;
 }
 
-.myButton:hover{
-    background-color: rgb(0, 243, 8);
-    color: rgb(255, 255, 255);
+.myButton:hover {
+  background-color: rgb(0, 243, 8);
+  color: rgb(255, 255, 255);
 }
 
-.myButton--bordered{
-    border: 1px solid rgb(128, 0, 68);
-    color: rgb(88, 0, 0);
-    background-color: rgb(255, 0, 128);
-
+.myButton--bordered {
+  color: rgb(88, 0, 0);
+  background-color: rgb(255, 0, 128);
 }
 
-.myButton--primary{
-    border: none;
-    color: rgb(88, 0, 0);
-    background-color: rgb(0, 153, 255);
-
+.myButton--primary {
+  border: none;
+  color: rgb(88, 0, 0);
+  background-color: rgb(0, 153, 255);
+  border: 1px solid rgb(128, 0, 68);
 }
 
-.myButton--primary:hover{
-    background-color: rgb(227, 243, 0);
-    color: rgb(255, 255, 255);
+.myButton--primary:hover {
+  background-color: rgb(128, 0, 68);
+  color: rgb(255, 255, 255);
+}
+
+.myButton--bordered:hover {
+  color: rgb(88, 0, 0);
+  background-color: rgb(0, 243, 8);
+}
+
+.myButton--lg {
+  height: 50px;
+  width: 160px;
+  padding: 15px 30px;
+}
+
+.myButton--md {
+  height: 40px;
+  width: 150px;
+  padding: 10px 20px;
+}
+
+.myButton--sm {
+  padding: 5px 10px;
+  height: 30px;
+  width: 150px;
 }
