--- a/src/components/Typography/Typography.css
+++ b/src/components/Typography/Typography.css
@@ -1,20 +1,17 @@
 .typography-sm {
-    font-size: 12px;
-  }
-  
-  .typography-md {
-    font-size: 16px;
-  }
-  
-  .typography-lg {
-    font-size: 18px;
-  }
-  
-  .typography-sm, .typography-md, .typography-lg {
-    text-indent: 1.5em;
-  }
-  
-  .typography-custom {
-    font-weight: bold;
-  }
-  
+  font-size: 12px;
+}
+
+.typography-md {
+  font-size: 16px;
+}
+
+.typography-lg {
+  font-size: 18px;
+}
+
+.typography-sm,
+.typography-md,
+.typography-lg {
+  text-indent: 1.5em;
+}
